--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chalk": "^1.1.3",
     "deep-equal": "^1.0.1",
     "github-api": "^2.3.0",
+    "node-cron-job": "^0.2.3",
     "npm-check-updates": "^2.8.6",
     "octonode": "^0.7.6",
     "os-tmpdir": "^1.0.2",
