--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,13 @@ node_js:
 
 before_install:
   - npm install gulp -g
+  - npm install santari -g
 
 script:
   - gulp --verbose
+  
+after_success:
+  - santari --repo jeremyrajan/santari
 
 cache:
   directories:
