--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ after_success:
   - santari --repo jeremyrajan/santari
   - chmod +x ./scripts/npm_login.sh
   - ./scripts/npm_login.sh
-  - gulp deploy
+  - test $TRAVIS_BRANCH = "master" && 
+    gulp deploy
 
 cache:
   directories:
