--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   "author": "Jeremy Rajan",
   "license": "MIT",
   "dependencies": {
+    "boxen": "^0.8.1",
     "chalk": "^1.1.3",
     "deep-equal": "^1.0.1",
     "npm-check-updates": "^2.8.9",
     "octonode": "^0.7.7",
     "os-tmpdir": "^1.0.2",
+    "prettyjson": "^1.2.1",
     "promise-series": "^1.0.0",
     "semver": "^5.3.0",
     "yargs": "^6.5.0"
