--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "boxen": "^0.8.1",
     "chalk": "^1.1.3",
     "deep-equal": "^1.0.1",
+    "fs-extra": "^1.0.0",
     "npm-check-updates": "^2.8.9",
     "octonode": "^0.7.7",
     "os-tmpdir": "^1.0.2",
