--- a/package.json
+++ b/package.json
@@ -22,14 +22,17 @@
   "dependencies": {
     "boxen": "^0.8.1",
     "chalk": "^1.1.3",
+    "crontab": "^1.1.3",
     "deep-equal": "^1.0.1",
     "fs-extra": "^1.0.0",
+    "light-router": "^0.1.3",
     "npm-check-updates": "^2.8.9",
     "octonode": "^0.7.7",
     "os-tmpdir": "^1.0.2",
     "prettyjson": "^1.2.1",
     "promise-series": "^1.0.0",
     "semver": "^5.3.0",
+    "static-server": "^2.0.3",
     "yargs": "^6.5.0"
   },
   "devDependencies": {
