--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jeremyrajan/santari.git"
+    "url": "git+https://github.com/remicass/santari.git"
   },
   "keywords": [
     "npm",
