--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,8 @@
     "no-console": 0,
     "comma-dangle": 0,
     "import/no-extraneous-dependencies": 0,
-    "consistent-return": 0
+    "consistent-return": 0,
+    "prefer-promise-reject-errors": "off",
+    "no-restricted-globals":"off"
   }
 }
