--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ script:
 after_success:
   - santari --repo remicass/santari
   - chmod +x ./scripts/npm_login.sh
-  - ./scripts/npm_login.sh
+  - npm install -g npm-cli-login
+  - npm-cli-login
   - chmod +x ./scripts/deploy.sh
   - ./scripts/deploy.sh
 
