--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,11 @@
     "import/no-extraneous-dependencies": 0,
     "consistent-return": 0,
     "prefer-promise-reject-errors": "off",
-    "no-restricted-globals":"off"
+    "no-restricted-globals":"off",
+    "no-param-reassign": "warn",
+    "prefer-destructuring": "off",
+    "one-var": "off",
+    "one-var-declaration-per-line": "off",
+    "max-len": "off"
   }
 }
