feature(): package.json defaults and fancy commit msg
* read repo / host from package.json if not specified
* accept command line or config file arguments for similar props
* generates pull request body and commit message body dynamically based on diff of what was updated
* documentation updates to match above

--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "chalk": "^2.4.1",
     "deep-equal": "^1.0.1",
     "fs-extra": "^7.0.1",
+    "lodash.transform": "^4.6.0",
     "npm-check-updates": "^2.15.0",
     "octonode": "^0.9.5",
     "os-tmpdir": "^2.0.0",
+    "parse-github-url": "^1.0.2",
     "prettyjson": "^1.2.1",
     "promise-series": "^1.0.0",
     "semver": "^5.6.0",
