--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "santari",
-  "version": "2.6.0-0",
+  "version": "2.6.0",
   "description": "Dependency Watcher",
   "main": "index.js",
   "scripts": {
